############################################################
#    PROJECT  : MALT (MALoc Tracker)
#    DATE     : 11/2025
#    LICENSE  : CeCILL-C
#    FILE     : src/webview/CMakeLists.txt
#-----------------------------------------------------------
#    AUTHOR   : Antoine Bernard (crans.org) - 2024
#    AUTHOR   : Sébastien Valat (INRIA) - 2025
############################################################

######################################################
add_subdirectory(client-files)